--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,10 @@ dependencies {
     compile files('libs/litepal-1.5.1.jar')
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.squareup.okio:okio:1.7.0'
+    compile 'com.squareup.picasso:picasso:2.5.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     testCompile 'junit:junit:4.12'
+    compile files('libs/gson-2.7.jar')
+    compile files('libs/glide-3.6.1.jar')
 }
